# whisper_coach

./: .dockerignore  AGENTS.md  CLAUDE.md  README.md  index.html
backend/: .dockerignore  .env.example  .gitignore  ACCEPTANCE.md  Dockerfile  IMPLEMENTATION.md  README.md  TEST.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a0f1e44bf3bd_add_match_summary_column.py  a3b4c5d6e7f8_credits_system.py  a7b8c9d0e1f2_shared_teams.py  b4c5d6e7f8a9_lineup_subs.py  b8c9d0e1f2a3_users_table_serial_id.py  c2d3e4f5a6b7_add_owner_id.py  c5d6e7f8a9b0_player_nickname.py  c9d0e1f2a3b4_user_team_auth0_id.py  d0e1f2a3b4c5_match_home_time_pitch.py  d6e7f8a9b0c1_match_unavailable_players.py  e1f2a3b4c5d6_match_address.py  e5f6a7b8c9d0_add_player_profile.py  e7f8a9b0c1d2_credit_txn_user_id.py  ebba3b058bbc_initial_schema.py  f2a3b4c5d6e7_team_owner_id.py  f6a7b8c9d0e1_add_player_absences.py  f8a9b0c1d2e3_user_summary_style.py
backend/app/: auth.py  config.py  credits.py  db.py  main.py  membership.py  models.py  schemas.py
backend/app/agents/: __init__.py  analyst.py  import_editor.py  lineup.py  match_extract.py  matcher.py  player_profile.py  roster.py  style_distiller.py  transcribe.py
backend/app/routers/: credits.py  imports.py  matches.py  me.py  roster.py
backend/app/services/: import_review.py  import_store.py
backend/app/static/: index.html
backend/app/tests/: conftest.py  test_auth.py  test_credits.py  test_imports.py  test_lineup.py  test_lineup_harness.py  test_matches.py  test_roster.py  test_summary.py  (+2 more)
(+174 files in other folders)
