[project]
name = "whisper-coach-backend"
version = "0.1.0"
description = "Whisper Coach backend — FastAPI + PydanticAI football coaching assistant"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlmodel>=0.0.22",
    "pydantic-ai>=0.0.14",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
markers = [
    "live: tests that hit the real LLM (skipped by default)",
]

[tool.uv]
package = false
